Postfix for bug#26180 Can't add columns to tables created with utf8 (regular) text indexes The original patch broke "fulltext" test.